--- a/1-Introducao-ao-curso-de-HTML/index.html
+++ b/1-Introducao-ao-curso-de-HTML/index.html
@@ -5,6 +5,19 @@
         <title>Gabriel Nardes</title>
     </head>
     <body>
-        Gabriel Narde
+        <header>
+            <h1>Gabriel Nardes</h1>
+        </header>
+        <section>
+            <header>
+                <h2>Posts</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                </header>
+            </article>
+        </section>
     </body>
+    <footer></footer>
 </html>
