Como usar textos e links em HTML

--- a/1-Introducao-ao-curso-de-HTML/index.html
+++ b/1-Introducao-ao-curso-de-HTML/index.html
@@ -16,6 +16,9 @@
                 <header>
                     <h3>Post #1</h3>
                 </header>
+                <p>
+                    Linkedin: <a href="https://www.linkedin.com/feed/" target="_blank">link</a>. Email: <a href="mailto:gabrielnardeslobao@gmail.com">email</a>
+                </p>
             </article>
         </section>
     </body>
