Como inserir imagens em seu site

--- a/1-Introducao-ao-curso-de-HTML/index.html
+++ b/1-Introducao-ao-curso-de-HTML/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+            <img src="user.png" alt="Foto do usuário">
             <h1>Gabriel Nardes</h1>
         </header>
         <section>
@@ -15,6 +16,7 @@
             <article>
                 <header>
                     <h3>Post #1</h3>
+                    <img src="background.jpg" alt="Imagem de números binários">
                 </header>
                 <p>
                     Linkedin: <a href="https://www.linkedin.com/feed/" target="_blank">link</a>. Email: <a href="mailto:gabrielnardeslobao@gmail.com">email</a>
