Como organizar listas com HTML

--- a/1-Introducao-ao-curso-de-HTML/index.html
+++ b/1-Introducao-ao-curso-de-HTML/index.html
@@ -19,10 +19,22 @@
                     <img src="background.jpg" alt="Imagem de números binários">
                 </header>
                 <p>
-                    Linkedin: <a href="https://www.linkedin.com/feed/" target="_blank">link</a>. Email: <a href="mailto:gabrielnardeslobao@gmail.com">email</a>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, voluptas praesentium aspernatur officiis earum quae delectus culpa, quia repellendus maxime exercitationem! Dignissimos aut vel consequatur incidunt veniam eaque consequuntur quisquam!
                 </p>
             </article>
         </section>
     </body>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="mailto:gabrielnardeslobao@gmail.com">Email</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/feed/" target="_blank">Linkedin</a>
+            </li>
+            <li>
+                <a href="https://www.github.com/gabrielnardes" target="_blank">Github</a>
+            </li>
+        </ul>
+    </footer>
 </html>
