--- a/1-Introducao-ao-curso-de-HTML/index.html
+++ b/1-Introducao-ao-curso-de-HTML/index.html
@@ -26,7 +26,7 @@
         </section>
     </body>
     <footer>
-        <ul>
+        <ul class="contacts_list">
             <li>
                 <a href="mailto:gabrielnardeslobao@gmail.com">Email</a>
             </li>
